service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-app-service
spec:
  type: NodePort
  selector:
    app: mlops-app
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30007
