ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mlops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlops-app-service
            port:
              number: 8000
